<resources>
    <string name="app_name">FloraNotify</string>
    <string name="senha">Senha</string>
    <string name="ol_fa_a_login">Olá, faça login</string>
    <string name="email">Email</string>
    <string name="insira_o_seu_email">Insira o seu email</string>
    <string name="insira_a_sua_senha">Insira a sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="ou_entre_com">Ou entre com:</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="entrar_com_conta_google">Entrar com conta Google</string>
    <string name="entrar_com_twitter">Entrar com Twitter</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="insira_o_seu_nome">Insira o seu nome</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="repita_a_sua_senha">Repita a sua senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="redefinir_senha">Redefinir Senha</string>
    <string name="enviar_email_de_recupera_o">Enviar email de recuperação</string>
    <string name="por_favor_insira_o_seu_endere_o_de_email">Por favor, insira o seu endereço de email</string>
    <string name="verifique_conexao_internet">Verifique a conexão com a internet e tente novamente</string>
    <string name="verifique_a_sua_conex_o_e_tente_novamente">Verifique a sua conexão e tente novamente</string>
    <string name="os_campos_n_o_podem_ficar_vazios">Os campos não podem ficar vazios</string>
    <string name="o_campo_email_n_o_pode_ficar_vazio">O campo email não pode ficar vazio</string>
    <string name="o_campo_senha_n_o_pode_ficar_vazio">O campo senha não pode ficar vazio</string>
    <string name="login_realizado_com_sucesso">Login realizado com sucesso</string>
    <string name="email_ou_senha_incorretos">Email ou senha incorretos</string>
    <string name="id_server">152798821558-g09sfljr1m1laa8r2msaac5s6v0t4s0t.apps.googleusercontent.com</string>
    <string name="facebook_app_id">268670476337283</string>
    <string name="facebook_token_client">35f3ae631e976af3760ef20179bd85b1</string>
    <string name="login_com_credencial_existente">com.google.firebase.auth.FirebaseAuthUserCollisionException: An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>

</resources>