<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/tv_cadastre"/>

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:layout_below="@id/tv_cadastre"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_nome"
        android:padding="12dp"
        android:ems="10"
        android:hint="Insira o seu nome"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_nome"
        android:layout_alignStart="@+id/edt_nome"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_email"
        android:padding="12dp"
        android:ems="10"
        android:hint="@string/insira_o_seu_email"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_alignStart="@+id/edt_senha"
        android:text="@string/senha"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>



    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_senha"
        android:hint="@string/insira_a_sua_senha"
        android:padding="12dp"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_repita_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_senha"
        android:layout_alignStart="@+id/edt_senha"
        android:text="Repita a senha"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>



    <EditText
        android:id="@+id/edt_repita_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_repita_senha"
        android:hint="Repita a sua senha"
        android:padding="12dp"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_repita_senha"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="Cadastrar-se"
        android:textColor="@color/white" />



</RelativeLayout>